--- a/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
@@ -10,23 +10,47 @@
         <i class="fa fa-fw fa-angle-down text-active"></i>
       </span>
       <i class="glyphicon glyphicon-stats icon text-primary-dker"></i>
-      <span class="font-bold" translate="aside.nav.DASHBOARD">Dashboard</span>
+      <span class="font-bold" translate="aside.nav.DASHBOARD">省交通运输统计分析监测</span>
     </a>
     <ul class="nav nav-sub dk">
       <li class="nav-sub-header">
         <a href>
-          <span translate="aside.nav.DASHBOARD">Dashboard</span>
+          <span translate="aside.nav.DASHBOARD">省交通运输统计分析检测</span>
         </a>
       </li>
       <li ui-sref-active="active">
         <a ui-sref="app.dashboard-v1">
-          <span>Dashboard v1</span>
+          <span>城市客运</span>
         </a>
       </li>
       <li ui-sref-active="active">
         <a ui-sref="app.dashboard-v2">
           <b class="label bg-info pull-right">N</b>
-          <span>Dashboard v2</span>
+          <span>道路运输</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="app.dashboard-v2">
+          <b class="label bg-info pull-right">N</b>
+          <span>港口综合</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="app.dashboard-v2">
+          <b class="label bg-info pull-right">N</b>
+          <span>公路交调</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="app.dashboard-v2">
+          <b class="label bg-info pull-right">N</b>
+          <span>内河航道</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="app.dashboard-v2">
+          <b class="label bg-info pull-right">N</b>
+          <span>运输综合</span>
         </a>
       </li>
     </ul>
@@ -51,27 +75,37 @@
         <i class="fa fa-fw fa-angle-down text-active"></i>
       </span>
       <i class="glyphicon glyphicon-th-large icon text-success"></i>
-      <span class="font-bold">Apps</span>
+      <span class="font-bold">投资计划管理</span>
     </a>
     <ul class="nav nav-sub dk">
       <li class="nav-sub-header">
         <a href>
-          <span>Apps</span>
+          <span>投资计划管理</span>
         </a>
       </li>
       <li ui-sref-active="active">
         <a ui-sref="apps.note">
-          <span>Note</span>
+          <span>水运建设</span>
         </a>
       </li>
       <li ui-sref-active="active">
         <a ui-sref="apps.contact">
-          <span>Contacts</span>
+          <span>公路养护</span>
         </a>
       </li>
       <li ui-sref-active="active">
         <a ui-sref="app.weather">
-          <span>Weather</span>
+          <span>扶贫统计</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="app.weather">
+          <span>固定资产</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="app.weather">
+          <span>企业法人财务状况</span>
         </a>
       </li>
     </ul>
@@ -82,6 +116,7 @@
   <li class="hidden-folded padder m-t m-b-sm text-muted text-xs">
     <span translate="aside.nav.components.COMPONENTS">Components</span>
   </li>
+
   <li>
     <a href class="auto">      
       <span class="pull-right text-muted">
@@ -90,31 +125,155 @@
       </span>
       <b class="badge bg-info pull-right">3</b>
       <i class="glyphicon glyphicon-th"></i>
-      <span>Layout</span>
+      <span>公路交通</span>
     </a>
     <ul class="nav nav-sub dk">
       <li class="nav-sub-header">
         <a href>
-          <span>Layout</span>
+          <span>公路交通</span>
         </a>
       </li>
       <li ui-sref-active="active">
         <a ui-sref="layout.app">
-          <span>Application</span>
+          <span>高速公路流量观测</span>
         </a>
       </li>
       <li ui-sref-active="active">
         <a ui-sref="layout.fullwidth">
-          <span>Full width</span>
+          <span>市公路工程项目管理</span>
+        </a>
+      </li>
+    </ul>
+  </li>
+
+  <li>
+    <a href class="auto">
+      <span class="pull-right text-muted">
+        <i class="fa fa-fw fa-angle-right text"></i>
+        <i class="fa fa-fw fa-angle-down text-active"></i>
+      </span>
+      <b class="badge bg-info pull-right">3</b>
+      <i class="glyphicon glyphicon-th"></i>
+      <span>其他交通</span>
+    </a>
+    <ul class="nav nav-sub dk">
+      <li class="nav-sub-header">
+        <a href>
+          <span>其他交通</span>
         </a>
       </li>
       <li ui-sref-active="active">
-        <a ui-sref="layout.mobile">
-          <span>Mobile</span>
+        <a ui-sref="layout.app">
+          <span>智慧公交</span>
         </a>
-      </li>      
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="layout.fullwidth">
+          <span>区站场视频监控</span>
+        </a>
+      </li>
     </ul>
   </li>
+
+  <li>
+    <a href class="auto">
+      <span class="pull-right text-muted">
+        <i class="fa fa-fw fa-angle-right text"></i>
+        <i class="fa fa-fw fa-angle-down text-active"></i>
+      </span>
+      <b class="badge bg-info pull-right">3</b>
+      <i class="glyphicon glyphicon-th"></i>
+      <span>省道路运输三级协同管理</span>
+    </a>
+    <ul class="nav nav-sub dk">
+      <li class="nav-sub-header">
+        <a href>
+          <span>省道路运输三级协同管理</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="layout.app">
+          <span>道路运输经营许可证信息</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="layout.fullwidth">
+          <span>道路运输经营许可证换证信息</span>
+        </a>
+      </li>
+
+      <li ui-sref-active="active">
+        <a ui-sref="layout.fullwidth">
+          <span>经营业户质量信誉考核信息</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="layout.fullwidth">
+          <span>经营业户工商注册信息</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="layout.fullwidth">
+          <span>经营业户税务登记信息</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="layout.fullwidth">
+          <span>道路客运站专项信息</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="layout.fullwidth">
+          <span>道路货运站专项信息</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="layout.fullwidth">
+          <span>机动车维修经营业户专项信息</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="layout.fullwidth">
+          <span>机动车驾驶员培训业户专项信息</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="layout.fullwidth">
+          <span>经营业户安全生产事故信息</span>
+        </a>
+      </li>
+    </ul>
+  </li>
+
+  <li>
+    <a href class="auto">
+      <span class="pull-right text-muted">
+        <i class="fa fa-fw fa-angle-right text"></i>
+        <i class="fa fa-fw fa-angle-down text-active"></i>
+      </span>
+      <b class="badge bg-info pull-right">3</b>
+      <i class="glyphicon glyphicon-th"></i>
+      <span>信用管理</span>
+    </a>
+    <ul class="nav nav-sub dk">
+      <li class="nav-sub-header">
+        <a href>
+          <span>信用管理</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="layout.app">
+          <span>省水路运输市场信用信息管理</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="layout.fullwidth">
+          <span>省公路水路建设市场信用信息管理</span>
+        </a>
+      </li>
+    </ul>
+  </li>
+
   <li ng-class="{active:$state.includes('app.ui')}">
     <a href class="auto">
       <span class="pull-right text-muted">
