--- a/beauty-project/traffic/src/main/webapp/tra/blocks/aside.html
+++ b/beauty-project/traffic/src/main/webapp/tra/blocks/aside.html
@@ -53,7 +53,7 @@
     <!-- / user -->
 
     <!-- nav -->
-    <nav ui-nav class="navi" ng-include="'tpl/blocks/nav.html'"></nav>
+    <nav ui-nav class="navi" ng-include="'tra/blocks/nav.html'"></nav>
     <!-- nav -->
 
     <!-- aside footer -->
