--- a/beauty-project/traffic/src/main/webapp/tpl/tra/statistic.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/tra/statistic.html
@@ -1,5 +1,5 @@
 <div class="hbox hbox-auto-xs hbox-auto-sm" ng-init="
-    app.settings.asideFolded = true;
+    app.settings.asideFolded = false;
     app.settings.asideDock = true;
   ">
   <!-- main -->
