--- a/beauty-project/traffic/src/main/webapp/tpl/blocks/header.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/blocks/header.html
@@ -1,5 +1,5 @@
       <!-- navbar header -->
-      <div class="navbar-header {{app.settings.navbarHeaderColor}}">
+      <div class="navbar-header {{app.settings.navbarHeaderColor}}" style="width: 230px;z-index: 999">
         <button class="pull-right visible-xs dk" ui-toggle-class="show" data-target=".navbar-collapse">
           <i class="glyphicon glyphicon-cog"></i>
         </button>
@@ -7,7 +7,7 @@
           <i class="glyphicon glyphicon-align-justify"></i>
         </button>
         <!-- brand -->
-        <a href="#/" class="navbar-brand text-lt">
+        <a class="navbar-brand text-lt">
           <i class="fa fa-btc"></i>
           <img src="img/logo.png" alt="." class="hide">
           <span class="hidden-folded m-l-xs">{{app.name}}</span>
@@ -19,159 +19,159 @@
       <!-- navbar collapse -->
       <div class="collapse pos-rlt navbar-collapse box-shadow {{app.settings.navbarCollapseColor}}">
         <!-- buttons -->
-        <div class="nav navbar-nav hidden-xs">
-          <a href class="btn no-shadow navbar-btn" ng-click="app.settings.asideFolded = !app.settings.asideFolded">
-            <i class="fa {{app.settings.asideFolded ? 'fa-indent' : 'fa-dedent'}} fa-fw"></i>
-          </a>
-          <a href class="btn no-shadow navbar-btn" ui-toggle-class="show" target="#aside-user">
-            <i class="icon-user fa-fw"></i>
-          </a>
-        </div>
+        <!--<div class="nav navbar-nav hidden-xs">-->
+          <!--<a href class="btn no-shadow navbar-btn" ng-click="app.settings.asideFolded = !app.settings.asideFolded">-->
+            <!--<i class="fa {{app.settings.asideFolded ? 'fa-indent' : 'fa-dedent'}} fa-fw"></i>-->
+          <!--</a>-->
+          <!--<a href class="btn no-shadow navbar-btn" ui-toggle-class="show" target="#aside-user">-->
+            <!--<i class="icon-user fa-fw"></i>-->
+          <!--</a>-->
+        <!--</div>-->
         <!-- / buttons -->
 
-        <!-- link and dropdown -->
-        <ul class="nav navbar-nav hidden-sm">
-          <li class="dropdown pos-stc" dropdown>
-            <a href class="dropdown-toggle" dropdown-toggle>
-              <span>Mega</span> 
-              <span class="caret"></span>
-            </a>
-            <div class="dropdown-menu wrapper w-full bg-white">
-              <div class="row">
-                <div class="col-sm-4">
-                  <div class="m-l-xs m-t-xs m-b-xs font-bold">Pages <span class="badge badge-sm bg-success">10</span></div>
-                  <div class="row">
-                    <div class="col-xs-6">
-                      <ul class="list-unstyled l-h-2x">
-                        <li>
-                          <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Profile</a>
-                        </li>
-                        <li>
-                          <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Post</a>
-                        </li>
-                        <li>
-                          <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Search</a>
-                        </li>
-                        <li>
-                          <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Invoice</a>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="col-xs-6">
-                      <ul class="list-unstyled l-h-2x">
-                        <li>
-                          <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Price</a>
-                        </li>
-                        <li>
-                          <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Lock screen</a>
-                        </li>
-                        <li>
-                          <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Sign in</a>
-                        </li>
-                        <li>
-                          <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Sign up</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-4 b-l b-light">
-                  <div class="m-l-xs m-t-xs m-b-xs font-bold">UI Kits <span class="label label-sm bg-primary">12</span></div>
-                  <div class="row">
-                    <div class="col-xs-6">
-                      <ul class="list-unstyled l-h-2x">
-                        <li>
-                          <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Buttons</a>
-                        </li>
-                        <li>
-                          <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Icons <span class="badge badge-sm bg-warning">1000+</span></a>
-                        </li>
-                        <li>
-                          <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Grid</a>
-                        </li>
-                        <li>
-                          <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Widgets</a>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="col-xs-6">
-                      <ul class="list-unstyled l-h-2x">
-                        <li>
-                          <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Bootstap</a>
-                        </li>
-                        <li>
-                          <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Sortable</a>
-                        </li>
-                        <li>
-                          <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Portlet</a>
-                        </li>
-                        <li>
-                          <a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Timeline</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-4 b-l b-light">
-                  <div class="m-l-xs m-t-xs m-b-sm font-bold">Analysis</div>
-                  <div class="text-center">
-                    <div class="inline">
-                      <div ui-jq="easyPieChart" ui-options="{
-                          percent: 65,
-                          lineWidth: 50,
-                          trackColor: '{{app.color.light}}',
-                          barColor: '{{app.color.info}}',
-                          scaleColor: false,
-                          size: 100,
-                          rotate: 90,
-                          lineCap: 'butt',
-                          animate: 2000
-                        }">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li class="dropdown" dropdown>
-            <a href class="dropdown-toggle" dropdown-toggle>
-              <i class="fa fa-fw fa-plus visible-xs-inline-block"></i>
-              <span translate="header.navbar.new.NEW">New</span> <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="#" translate="header.navbar.new.PROJECT">Projects</a></li>
-              <li>
-                <a href>
-                  <span class="badge bg-info pull-right">5</span>
-                  <span translate="header.navbar.new.TASK">Task</span>
-                </a>
-              </li>
-              <li><a href translate="header.navbar.new.USER">User</a></li>
-              <li class="divider"></li>
-              <li>
-                <a href>
-                  <span class="badge bg-danger pull-right">4</span>
-                  <span translate="header.navbar.new.EMAIL">Email</span>
-                </a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-        <!-- / link and dropdown -->
+        <!--&lt;!&ndash; link and dropdown &ndash;&gt;-->
+        <!--<ul class="nav navbar-nav hidden-sm">-->
+          <!--<li class="dropdown pos-stc" dropdown>-->
+            <!--<a href class="dropdown-toggle" dropdown-toggle>-->
+              <!--<span>Mega</span> -->
+              <!--<span class="caret"></span>-->
+            <!--</a>-->
+            <!--<div class="dropdown-menu wrapper w-full bg-white">-->
+              <!--<div class="row">-->
+                <!--<div class="col-sm-4">-->
+                  <!--<div class="m-l-xs m-t-xs m-b-xs font-bold">Pages <span class="badge badge-sm bg-success">10</span></div>-->
+                  <!--<div class="row">-->
+                    <!--<div class="col-xs-6">-->
+                      <!--<ul class="list-unstyled l-h-2x">-->
+                        <!--<li>-->
+                          <!--<a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Profile</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                          <!--<a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Post</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                          <!--<a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Search</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                          <!--<a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Invoice</a>-->
+                        <!--</li>-->
+                      <!--</ul>-->
+                    <!--</div>-->
+                    <!--<div class="col-xs-6">-->
+                      <!--<ul class="list-unstyled l-h-2x">-->
+                        <!--<li>-->
+                          <!--<a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Price</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                          <!--<a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Lock screen</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                          <!--<a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Sign in</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                          <!--<a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Sign up</a>-->
+                        <!--</li>-->
+                      <!--</ul>-->
+                    <!--</div>-->
+                  <!--</div>-->
+                <!--</div>-->
+                <!--<div class="col-sm-4 b-l b-light">-->
+                  <!--<div class="m-l-xs m-t-xs m-b-xs font-bold">UI Kits <span class="label label-sm bg-primary">12</span></div>-->
+                  <!--<div class="row">-->
+                    <!--<div class="col-xs-6">-->
+                      <!--<ul class="list-unstyled l-h-2x">-->
+                        <!--<li>-->
+                          <!--<a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Buttons</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                          <!--<a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Icons <span class="badge badge-sm bg-warning">1000+</span></a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                          <!--<a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Grid</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                          <!--<a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Widgets</a>-->
+                        <!--</li>-->
+                      <!--</ul>-->
+                    <!--</div>-->
+                    <!--<div class="col-xs-6">-->
+                      <!--<ul class="list-unstyled l-h-2x">-->
+                        <!--<li>-->
+                          <!--<a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Bootstap</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                          <!--<a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Sortable</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                          <!--<a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Portlet</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                          <!--<a href><i class="fa fa-fw fa-angle-right text-muted m-r-xs"></i>Timeline</a>-->
+                        <!--</li>-->
+                      <!--</ul>-->
+                    <!--</div>-->
+                  <!--</div>-->
+                <!--</div>-->
+                <!--<div class="col-sm-4 b-l b-light">-->
+                  <!--<div class="m-l-xs m-t-xs m-b-sm font-bold">Analysis</div>-->
+                  <!--<div class="text-center">-->
+                    <!--<div class="inline">-->
+                      <!--<div ui-jq="easyPieChart" ui-options="{-->
+                          <!--percent: 65,-->
+                          <!--lineWidth: 50,-->
+                          <!--trackColor: '{{app.color.light}}',-->
+                          <!--barColor: '{{app.color.info}}',-->
+                          <!--scaleColor: false,-->
+                          <!--size: 100,-->
+                          <!--rotate: 90,-->
+                          <!--lineCap: 'butt',-->
+                          <!--animate: 2000-->
+                        <!--}">-->
+                      <!--</div>-->
+                    <!--</div>-->
+                  <!--</div>-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</div>-->
+          <!--</li>-->
+          <!--<li class="dropdown" dropdown>-->
+            <!--<a href class="dropdown-toggle" dropdown-toggle>-->
+              <!--<i class="fa fa-fw fa-plus visible-xs-inline-block"></i>-->
+              <!--<span translate="header.navbar.new.NEW">New</span> <span class="caret"></span>-->
+            <!--</a>-->
+            <!--<ul class="dropdown-menu" role="menu">-->
+              <!--<li><a href="#" translate="header.navbar.new.PROJECT">Projects</a></li>-->
+              <!--<li>-->
+                <!--<a href>-->
+                  <!--<span class="badge bg-info pull-right">5</span>-->
+                  <!--<span translate="header.navbar.new.TASK">Task</span>-->
+                <!--</a>-->
+              <!--</li>-->
+              <!--<li><a href translate="header.navbar.new.USER">User</a></li>-->
+              <!--<li class="divider"></li>-->
+              <!--<li>-->
+                <!--<a href>-->
+                  <!--<span class="badge bg-danger pull-right">4</span>-->
+                  <!--<span translate="header.navbar.new.EMAIL">Email</span>-->
+                <!--</a>-->
+              <!--</li>-->
+            <!--</ul>-->
+          <!--</li>-->
+        <!--</ul>-->
+        <!--&lt;!&ndash; / link and dropdown &ndash;&gt;-->
 
-        <!-- search form -->
-        <form class="navbar-form navbar-form-sm navbar-left shift" ui-shift="prependTo" target=".navbar-collapse" role="search" ng-controller="TypeaheadDemoCtrl">
-          <div class="form-group">
-            <div class="input-group">
-              <input type="text" ng-model="selected" typeahead="state for state in states | filter:$viewValue | limitTo:8" class="form-control input-sm bg-light no-border rounded padder" placeholder="Search projects...">
-              <span class="input-group-btn">
-                <button type="submit" class="btn btn-sm bg-light rounded"><i class="fa fa-search"></i></button>
-              </span>
-            </div>
-          </div>
-        </form>
-        <!-- / search form -->
+        <!--&lt;!&ndash; search form &ndash;&gt;-->
+        <!--<form class="navbar-form navbar-form-sm navbar-left shift" ui-shift="prependTo" target=".navbar-collapse" role="search" ng-controller="TypeaheadDemoCtrl">-->
+          <!--<div class="form-group">-->
+            <!--<div class="input-group">-->
+              <!--<input type="text" ng-model="selected" typeahead="state for state in states | filter:$viewValue | limitTo:8" class="form-control input-sm bg-light no-border rounded padder" placeholder="Search projects...">-->
+              <!--<span class="input-group-btn">-->
+                <!--<button type="submit" class="btn btn-sm bg-light rounded"><i class="fa fa-search"></i></button>-->
+              <!--</span>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</form>-->
+        <!--&lt;!&ndash; / search form &ndash;&gt;-->
 
         <!-- nabar right -->
         <ul class="nav navbar-nav navbar-right">
