--- a/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
@@ -4,56 +4,50 @@
     <span translate="aside.nav.HEADER">Navigation</span>
   </li>
   <li>
-    <a href class="auto">      
-      <span class="pull-right text-muted">
-        <i class="fa fa-fw fa-angle-right text"></i>
-        <i class="fa fa-fw fa-angle-down text-active"></i>
-      </span>
+    <a href class="auto">
       <i class="glyphicon glyphicon-stats icon text-primary-dker"></i>
       <span class="font-bold" translate="aside.nav.DASHBOARD">省交通运输统计分析监测</span>
     </a>
-    <ul class="nav nav-sub dk">
-      <li class="nav-sub-header">
-        <a href>
-          <span translate="aside.nav.DASHBOARD">省交通运输统计分析检测</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="app.dashboard-v1">
-          <span>城市客运</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="app.dashboard-v2">
-          <b class="label bg-info pull-right">N</b>
-          <span>道路运输</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="app.dashboard-v2">
-          <b class="label bg-info pull-right">N</b>
-          <span>港口综合</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="app.dashboard-v2">
-          <b class="label bg-info pull-right">N</b>
-          <span>公路交调</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="app.dashboard-v2">
-          <b class="label bg-info pull-right">N</b>
-          <span>内河航道</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="app.dashboard-v2">
-          <b class="label bg-info pull-right">N</b>
-          <span>运输综合</span>
-        </a>
-      </li>
-    </ul>
+  </li>
+  <li>
+    <a href class="auto">
+      <b class="badge bg-info pull-right">3</b>
+      <i class="glyphicon glyphicon-th"></i>
+      <span>公路交通</span>
+    </a>
+  </li>
+  <li>
+    <a href class="auto">
+      <i class="glyphicon glyphicon-th-large icon text-success"></i>
+      <span class="font-bold">水路交通</span>
+    </a>
+  </li>
+  <li>
+    <a href class="auto">
+      <b class="badge bg-info pull-right">3</b>
+      <i class="glyphicon glyphicon-th"></i>
+      <span>其他交通</span>
+    </a>
+  </li>
+  <li>
+    <a href class="auto">
+      <b class="badge bg-info pull-right">3</b>
+      <i class="glyphicon glyphicon-th"></i>
+      <span>省道路运输三级协同管理</span>
+    </a>
+  </li>
+  <li>
+    <a href class="auto">
+      <b class="badge bg-info pull-right">3</b>
+      <i class="glyphicon glyphicon-th"></i>
+      <span>信用管理</span>
+    </a>
+  </li>
+  <li>
+    <a href class="auto">
+      <i class="glyphicon glyphicon-th-large icon text-success"></i>
+      <span class="font-bold">投资计划管理</span>
+    </a>
   </li>
   <li ui-sref-active="active">
     <a ui-sref="app.calendar">
@@ -68,210 +62,11 @@
       <span class="font-bold" translate="aside.nav.EMAIL">Email</span>
     </a>
   </li>
-  <li>
-    <a href class="auto">
-      <span class="pull-right text-muted">
-        <i class="fa fa-fw fa-angle-right text"></i>
-        <i class="fa fa-fw fa-angle-down text-active"></i>
-      </span>
-      <i class="glyphicon glyphicon-th-large icon text-success"></i>
-      <span class="font-bold">投资计划管理</span>
-    </a>
-    <ul class="nav nav-sub dk">
-      <li class="nav-sub-header">
-        <a href>
-          <span>投资计划管理</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="apps.note">
-          <span>水运建设</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="apps.contact">
-          <span>公路养护</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="app.weather">
-          <span>扶贫统计</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="app.weather">
-          <span>固定资产</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="app.weather">
-          <span>企业法人财务状况</span>
-        </a>
-      </li>
-    </ul>
-  </li>
 
   <li class="line dk"></li>
 
   <li class="hidden-folded padder m-t m-b-sm text-muted text-xs">
     <span translate="aside.nav.components.COMPONENTS">Components</span>
-  </li>
-
-  <li>
-    <a href class="auto">      
-      <span class="pull-right text-muted">
-        <i class="fa fa-fw fa-angle-right text"></i>
-        <i class="fa fa-fw fa-angle-down text-active"></i>
-      </span>
-      <b class="badge bg-info pull-right">3</b>
-      <i class="glyphicon glyphicon-th"></i>
-      <span>公路交通</span>
-    </a>
-    <ul class="nav nav-sub dk">
-      <li class="nav-sub-header">
-        <a href>
-          <span>公路交通</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="layout.app">
-          <span>高速公路流量观测</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="layout.fullwidth">
-          <span>市公路工程项目管理</span>
-        </a>
-      </li>
-    </ul>
-  </li>
-
-  <li>
-    <a href class="auto">
-      <span class="pull-right text-muted">
-        <i class="fa fa-fw fa-angle-right text"></i>
-        <i class="fa fa-fw fa-angle-down text-active"></i>
-      </span>
-      <b class="badge bg-info pull-right">3</b>
-      <i class="glyphicon glyphicon-th"></i>
-      <span>其他交通</span>
-    </a>
-    <ul class="nav nav-sub dk">
-      <li class="nav-sub-header">
-        <a href>
-          <span>其他交通</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="layout.app">
-          <span>智慧公交</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="layout.fullwidth">
-          <span>区站场视频监控</span>
-        </a>
-      </li>
-    </ul>
-  </li>
-
-  <li>
-    <a href class="auto">
-      <span class="pull-right text-muted">
-        <i class="fa fa-fw fa-angle-right text"></i>
-        <i class="fa fa-fw fa-angle-down text-active"></i>
-      </span>
-      <b class="badge bg-info pull-right">3</b>
-      <i class="glyphicon glyphicon-th"></i>
-      <span>省道路运输三级协同管理</span>
-    </a>
-    <ul class="nav nav-sub dk">
-      <li class="nav-sub-header">
-        <a href>
-          <span>省道路运输三级协同管理</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="layout.app">
-          <span>道路运输经营许可证信息</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="layout.fullwidth">
-          <span>道路运输经营许可证换证信息</span>
-        </a>
-      </li>
-
-      <li ui-sref-active="active">
-        <a ui-sref="layout.fullwidth">
-          <span>经营业户质量信誉考核信息</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="layout.fullwidth">
-          <span>经营业户工商注册信息</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="layout.fullwidth">
-          <span>经营业户税务登记信息</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="layout.fullwidth">
-          <span>道路客运站专项信息</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="layout.fullwidth">
-          <span>道路货运站专项信息</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="layout.fullwidth">
-          <span>机动车维修经营业户专项信息</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="layout.fullwidth">
-          <span>机动车驾驶员培训业户专项信息</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="layout.fullwidth">
-          <span>经营业户安全生产事故信息</span>
-        </a>
-      </li>
-    </ul>
-  </li>
-
-  <li>
-    <a href class="auto">
-      <span class="pull-right text-muted">
-        <i class="fa fa-fw fa-angle-right text"></i>
-        <i class="fa fa-fw fa-angle-down text-active"></i>
-      </span>
-      <b class="badge bg-info pull-right">3</b>
-      <i class="glyphicon glyphicon-th"></i>
-      <span>信用管理</span>
-    </a>
-    <ul class="nav nav-sub dk">
-      <li class="nav-sub-header">
-        <a href>
-          <span>信用管理</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="layout.app">
-          <span>省水路运输市场信用信息管理</span>
-        </a>
-      </li>
-      <li ui-sref-active="active">
-        <a ui-sref="layout.fullwidth">
-          <span>省公路水路建设市场信用信息管理</span>
-        </a>
-      </li>
-    </ul>
   </li>
 
   <li ng-class="{active:$state.includes('app.ui')}">
