--- a/beauty-project/traffic/src/main/webapp/tpl/blocks/header.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/blocks/header.html
@@ -10,7 +10,7 @@
         <a class="navbar-brand text-lt">
           <i class="fa fa-btc"></i>
           <img src="img/logo.png" alt="." class="hide">
-          <span class="hidden-folded m-l-xs">{{app.name}}</span>
+          <span class="hidden-folded m-l-xs" style="font-size: 18px">{{app.name}}</span>
         </a>
         <!-- / brand -->
       </div>
@@ -175,21 +175,21 @@
 
         <!-- nabar right -->
         <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown hidden-sm" is-open="lang.isopen" dropdown>
-            <a href class="dropdown-toggle" dropdown-toggle>
-              {{selectLang}} <b class="caret"></b>
-            </a>
-            <!-- dropdown -->
-            <ul class="dropdown-menu animated fadeInRight w">
-              <li ng-repeat="(langKey, label) in langs">
-                <a ng-click="setLang(langKey, $event)" href>{{label}}</a>
-              </li>
-            </ul>
-            <!-- / dropdown -->
-          </li>
-          <li class="hidden-xs">
-            <a ui-fullscreen></a>
-          </li>
+<!--          <li class="dropdown hidden-sm" is-open="lang.isopen" dropdown>-->
+<!--            <a href class="dropdown-toggle" dropdown-toggle>-->
+<!--              {{selectLang}} <b class="caret"></b>-->
+<!--            </a>-->
+<!--            &lt;!&ndash; dropdown &ndash;&gt;-->
+<!--            <ul class="dropdown-menu animated fadeInRight w">-->
+<!--              <li ng-repeat="(langKey, label) in langs">-->
+<!--                <a ng-click="setLang(langKey, $event)" href>{{label}}</a>-->
+<!--              </li>-->
+<!--            </ul>-->
+<!--            &lt;!&ndash; / dropdown &ndash;&gt;-->
+<!--          </li>-->
+<!--          <li class="hidden-xs">-->
+<!--            <a ui-fullscreen></a>-->
+<!--          </li>-->
           <li class="dropdown" dropdown>
             <a href class="dropdown-toggle" dropdown-toggle>
               <i class="icon-bell fa-fw"></i>
@@ -233,7 +233,7 @@
                 <img src="img/a0.jpg" alt="...">
                 <i class="on md b-white bottom"></i>
               </span>
-              <span class="hidden-sm hidden-md">John.Smith</span> <b class="caret"></b>
+              <span class="hidden-sm hidden-md">管理员</span> <b class="caret"></b>
             </a>
             <!-- dropdown -->
             <ul class="dropdown-menu animated fadeInRight w">
