--- a/beauty-project/traffic/src/main/webapp/tpl/tra/statistic.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/tra/statistic.html
@@ -79,10 +79,10 @@
           <div class="panel-body">
             <div class="row">
               <div class="col-md-4">
-                <spam>高速公路流量观测</spam>
+                <span style="font-size:20px">高速公路流量观测</span>
               </div>
               <div class="col-md-8">
-                <span>查询月份</span>
+<!--                <span>查询月份</span>-->
                 <div class="input-group">
                   <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened"
                          datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
