--- a/beauty-project/traffic/src/main/webapp/tpl/tra/statistic.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/tra/statistic.html
@@ -77,33 +77,149 @@
       <div class="col-lg-8">
         <div class="panel panel-default">
           <div class="panel-body">
-            <div class="row">
-              <div class="col-md-4">
-                <span style="font-size:20px">高速公路流量观测</span>
+              <div class="row">
+                  <div class="col-md-4">
+                    <span style="font-size:20px">高速公路流量观测</span>
+                  </div>
+                  <div class="col-md-8">
+                    <div class="input-group">
+                      <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened"
+                             datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+                      <span class="input-group-btn">
+                        <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                      </span>
+                    </div>
+                  </div>
               </div>
-              <div class="col-md-8">
-<!--                <span>查询月份</span>-->
-                <div class="input-group">
-                  <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened"
-                         datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
-                  <span class="input-group-btn">
-                    <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-                  </span>
-                </div>
+              <br>
+              <div class="row">
+                  <div class="col-md-6">
+                      <div>
+                          <span>中小客车速</span>
+                          <br>
+                          <span><span style="font-size:30px">67</span><span>KM</span></span>
+                          <br>
+                          <i class="glyphicon glyphicon-arrow-down icon" style="color: green"></i>
+                          <span style="color: green">26%</span>
+                          <span>同比上月</span>
+                      </div>
+                      <br>
+                      <div ui-jq="plot" ui-options="
+                          [
+                            { data: {{d}}, points: { show: true, radius: 6}, splines: { show: true, tension: 0.45, lineWidth: 5, fill: 0 } }
+                          ],
+                          {
+                            colors: ['{{app.color.info}}'],
+                            series: { shadowSize: 3 },
+                            xaxis:{
+                              font: { color: '#ccc' },
+                              position: 'bottom',
+                              ticks: [
+                                [ 1, 'Jan' ], [ 2, 'Feb' ], [ 3, 'Mar' ], [ 4, 'Apr' ], [ 5, 'May' ], [ 6, 'Jun' ], [ 7, 'Jul' ], [ 8, 'Aug' ], [ 9, 'Sep' ], [ 10, 'Oct' ], [ 11, 'Nov' ], [ 12, 'Dec' ]
+                              ]
+                            },
+                            yaxis:{ font: { color: '#ccc' } },
+                            grid: { hoverable: true, clickable: true, borderWidth: 0, color: '#ccc' },
+                            tooltip: true,
+                            tooltipOpts: { content: '%x.1 is %y.4',  defaultTheme: false, shifts: { x: 0, y: 20 } }
+                          }
+                        " style="height:240px" >
+                      </div>
+                  </div>
+                  <div style="background: lightgrey;
+                              width: 1px;
+                              position: absolute;
+                              margin-left: 48%;
+                              height: 320px;
+                              top: 18%;">
+                  </div>
+                  <div class="col-md-6">
+                      <div>
+                          <span>中型车车速</span>
+                          <br>
+                          <span><span style="font-size:30px">68</span><span>KM</span></span>
+                          <br>
+                          <i class="glyphicon glyphicon-arrow-down icon" style="color: green"></i>
+                          <span style="color: green">26%</span>
+                          <span>同比上月</span>
+                      </div>
+                      <br>
+                      <div ui-jq="plot" ui-options="
+                          [
+                            { data: {{d}}, points: { show: true, radius: 6}, splines: { show: true, tension: 0.45, lineWidth: 5, fill: 0 } }
+                          ],
+                          {
+                            colors: ['{{app.color.info}}'],
+                            series: { shadowSize: 3 },
+                            xaxis:{
+                              font: { color: '#ccc' },
+                              position: 'bottom',
+                              ticks: [
+                                [ 1, 'Jan' ], [ 2, 'Feb' ], [ 3, 'Mar' ], [ 4, 'Apr' ], [ 5, 'May' ], [ 6, 'Jun' ], [ 7, 'Jul' ], [ 8, 'Aug' ], [ 9, 'Sep' ], [ 10, 'Oct' ], [ 11, 'Nov' ], [ 12, 'Dec' ]
+                              ]
+                            },
+                            yaxis:{ font: { color: '#ccc' } },
+                            grid: { hoverable: true, clickable: true, borderWidth: 0, color: '#ccc' },
+                            tooltip: true,
+                            tooltipOpts: { content: '%x.1 is %y.4',  defaultTheme: false, shifts: { x: 0, y: 20 } }
+                          }
+                        " style="height:240px" >
+                      </div>
+                  </div>
               </div>
-            </div>
           </div>
         </div>
       </div>
       <div class="col-lg-4">
         <div class="panel panel-default">
-          <div class="panel-body">col-lg-6</div>
+          <div class="panel-body">
+              <div class="row">
+                  <div class="col-md-4">
+                      <span style="font-size:20px">调查站信息</span>
+                  </div>
+                  <div class="col-md-8">
+                      <span style="margin-left:95%">...</span>
+                  </div>
+              </div>
+              <br>
+              <div class="table-responsive">
+                  <table class="table table-striped b-t b-light">
+                      <thead>
+                          <tr>
+                              <th>序号</th>
+                              <th>年份</th>
+                              <th>调查站标识</th>
+                              <th>管理机构标识</th>
+                              <th>路线标识</th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr ng-repeat="item in [1,2,3,4,5,6,7,8]">
+                              <td>{{$index+1}}</td>
+                              <td>2019</td>
+                              <td>有</td>
+                              <td>无</td>
+                              <td>--</td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
+          </div>
         </div>
       </div>
 
       <div class="col-lg-12">
         <div class="panel panel-default">
-          <div class="panel-body">col-lg-12</div>
+          <div class="panel-body">
+              <div class="row">
+                  <div class="col-md-2">
+                      <span style="font-size:20px">全市泊位</span>
+                  </div>
+                  <div class="col-md-10">
+                      <span style="font-size:20px">港口快报吞吐量</span>
+                  </div>
+              </div>
+          </div>
         </div>
       </div>
 
