--- a/beauty-project/traffic/src/main/webapp/tra/sjtystjfxjc/sjtystjfxjc_chenshikeyun.html
+++ b/beauty-project/traffic/src/main/webapp/tra/sjtystjfxjc/sjtystjfxjc_chenshikeyun.html
@@ -5,9 +5,9 @@
       <tab-heading>
         城市客运
       </tab-heading>
-      <ul class="list-group no-borders pull-in m-b-none" style="height:800px">
+      <ul class="list-group no-borders pull-in m-b-none" style="height:1160px">
         <div class="col-lg-6">
-          <div class="panel panel-default">
+          <div class="panel panel-default" style="height:450px">
             <div class="panel-body">
               <div class="panel-heading">
                 <span class="label bg-danger pull-right m-t-xs">...</span>
@@ -43,9 +43,12 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <div class="panel panel-default">
+          <div class="panel panel-default" style="height:450px">
             <div class="panel-body">
-              <div class="panel-heading font-bold">城市客运主要统计指标快速年报信息</div>
+              <div class="panel-heading font-bold">
+                <span class="label bg-danger pull-right m-t-xs">...</span>
+                城市客运主要统计指标快速年报信息
+              </div>
               <div class="panel-body">
                 <div ui-jq="plot" ui-options="
                 {{d3}},
@@ -62,23 +65,82 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <div class="panel panel-default">
+          <div class="panel panel-default" style="height:330px">
+            <div class="panel-heading font-bold">
+              <span class="label bg-danger pull-right m-t-xs">...</span>
+              出租汽车运营情况（单位：万元）
+            </div>
             <div class="panel-body">
-              123
+              <div ui-jq="plot" ui-options="
+              [
+                { data: {{d}}, points: { show: true, radius: 6}, splines: { show: true, tension: 0.45, lineWidth: 5, fill: 0 } }
+              ],
+              {
+                colors: ['{{app.color.info}}'],
+                series: { shadowSize: 3 },
+                xaxis:{
+                  font: { color: '#ccc' },
+                  position: 'bottom',
+                  ticks: [
+                    [ 1, 'Jan' ], [ 2, 'Feb' ], [ 3, 'Mar' ], [ 4, 'Apr' ], [ 5, 'May' ], [ 6, 'Jun' ], [ 7, 'Jul' ], [ 8, 'Aug' ], [ 9, 'Sep' ], [ 10, 'Oct' ], [ 11, 'Nov' ], [ 12, 'Dec' ]
+                  ]
+                },
+                yaxis:{ font: { color: '#ccc' } },
+                grid: { hoverable: true, clickable: true, borderWidth: 0, color: '#ccc' },
+                tooltip: true,
+                tooltipOpts: { content: '%x.1 is %y.4',  defaultTheme: false, shifts: { x: 0, y: 20 } }
+              }
+            " style="height:240px" >
+              </div>
             </div>
           </div>
         </div>
         <div class="col-lg-6">
-          <div class="panel panel-default">
+          <div class="panel panel-default" style="height:330px">
+            <div class="panel-heading font-bold">
+              <span class="label bg-danger pull-right m-t-xs">...</span>
+              公共汽电车运营情况
+            </div>
             <div class="panel-body">
-              123
+              <div ui-jq="plot" ui-options="
+              [
+                { data: {{d0_1}}, label: 'Unique Visits', points: { show: true } },
+                { data: {{d0_2}}, label: 'Page Views', bars: { show: true, barWidth: 0.6, fillColor: { colors: [{ opacity: 0.2 }, { opacity: 0.4}] } } }
+              ],
+              {
+                colors: [ '{{app.color.info}}','{{app.color.success}}' ],
+                series: { shadowSize: 2 },
+                xaxis:{ font: { color: '#ccc' } },
+                yaxis:{ font: { color: '#ccc' } },
+                grid: { hoverable: true, clickable: true, borderWidth: 0, color: '#ccc' },
+                tooltip: true,
+                tooltipOpts: { content: '%s of %x.1 is %y.4',  defaultTheme: false, shifts: { x: 0, y: 20 } }
+              }
+            " style="height:240px"></div>
             </div>
           </div>
         </div>
         <div class="col-lg-12">
           <div class="panel panel-default">
+            <div class="panel-heading font-bold">
+              <span class="label bg-danger pull-right m-t-xs">...</span>
+              城市交通运营情况
+            </div>
             <div class="panel-body">
-              123
+              <div ui-jq="plot" ui-options="
+              [
+                { data: {{d0_1}}, label: 'A', points: { show: true }, lines: { show: true, fill: true, fillColor: { colors: [{ opacity: 0.1 }, { opacity: 0.1}] } } }
+              ],
+              {
+                colors: [ '{{app.color.info}}','{{app.color.warning}}' ],
+                series: { shadowSize: 2 },
+                xaxis:{ font: { color: '#ccc' } },
+                yaxis:{ font: { color: '#ccc' } },
+                grid: { hoverable: true, clickable: true, borderWidth: 0, color: '#ccc' },
+                tooltip: true,
+                tooltipOpts: { content: '%s of %x.1 is %y.4',  defaultTheme: false, shifts: { x: 0, y: 20 } }
+              }
+            " style="height:240px"></div>
             </div>
           </div>
         </div>
