--- a/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
@@ -4,7 +4,7 @@
     <span translate="aside.nav.HEADER">Navigation</span>
   </li>
   <li>
-    <a href class="auto" ui-sref="app.sjtystjfxjc-chenshikeyun">
+    <a href class="auto" ui-sref="app.sjtystjfxjc">
       <i class="glyphicon glyphicon-stats icon text-primary-dker"></i>
       <span class="font-bold" translate="aside.nav.DASHBOARD">省交通运输统计分析监测</span>
     </a>
